codex-rs/tui/src/onboarding/snapshots/codex_tui__onboarding__trust_directory__tests__directory_change_consent_can_keep_current_directory.snap
---
source: tui/src/onboarding/trust_directory.rs
assertion_line: 368
expression: terminal.backend()
---

  Folder access
  /workspace/project                                                

  Trust this folder? ASM can read, edit, and run files here, subject
  to your permission settings. Folder settings can run code
  automatically, even without a model request. Continue only if you
  trust these files. Your trust decision will be saved.

› 1. Trust and continue                                               
  2. Keep current directory

  enter continue · esc cancel
